--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,1 @@
-{"version": 2, "builds": [{"src": "api/app.py", "use": "@vercel/python"}], "routes": [{"src": "/api/(.*)", "dest": "api/app.py"}, {"src": "/", "dest": "api/app.py"}, {"src": "/templates/(.*)", "dest": "templates/$1"}, {"src": "/(.*)", "dest": "templates/$1"}]}
+{"version": 2, "builds": [{"src": "main.py", "use": "@vercel/python"}], "routes": [{"src": "/(.*)", "dest": "main.py"}]}
